# DDX

./: .gitattributes  .gitignore  BCI-Important-Notes.md  CHANGELOG.md  LICENSE  Makefile  Manual-for-DDX.md  README.md  USB-Logs.txt
Active-Antenna/: AA.kicad_pcb  AA.kicad_pro  AA.kicad_sch  Balanced-HPF-Filter.lct  Final-HPF-Values.txt  HPF-SMD-BCI-Mitigation.lct  README.md
BPF-Compat/: Band_MODULE_V1_00-rescue.dcm  Band_MODULE_V1_00-rescue.lib  Band_MODULE_V1_00.kicad_pcb  Band_MODULE_V1_00.kicad_pro  Band_MODULE_V1_00.kicad_sch  README.md  sym-lib-table  transformer_1p_1s.kicad_sym
CWX/: Plan.txt  README.md  audmes-dhiru-2.patch
DDX-1/: HF-PA-v10.kicad_pcb  HF-PA-v10.kicad_sch
DDX-1-Mini/: HF-PA-v10.kicad_pcb  HF-PA-v10.kicad_sch
DDX-1-R1.10/: HF-PA-v10.csv  HF-PA-v10.kicad_pcb  HF-PA-v10.kicad_pro  HF-PA-v10.kicad_sch  audioamp.asc  sym-lib-table
DDX-1-R2.00/: HF-PA-v10.kicad_pcb  HF-PA-v10.kicad_pro  HF-PA-v10.kicad_sch  sym-lib-table
DDX-1-R2.01/: DDX-1-R2.01.kicad_pcb  DDX-1-R2.01.kicad_pro  DDX-1-R2.01.kicad_sch  README.txt  audioamp.asc
DDX-1-R2.20/: DDX-1-R2.20.kicad_pcb  DDX-1-R2.20.kicad_pro  DDX-1-R2.20.kicad_sch  README.txt  sym-lib-table
DDX-1-R2.50/: DDX-1-R2.50.kicad_pro  DDX-1-R2.50.kicad_sch
DDX-2/: DDX-2.kicad_pcb  README.md
DDX-2-R1.10/: DDX-2.kicad_pcb  DDX-2.kicad_pro  DDX-2.kicad_sch  README.md  sym-lib-table
DDX-4/: .gitignore  DDX-4.kicad_pcb  DDX-4.kicad_sch  sym-lib-table
DDX-4.1/: DDX-4.kicad_pcb  DDX-4.kicad_pro  DDX-4.kicad_sch  README.txt
DDX-Commercial-1/: DDX-Commercial-1.kicad_sch  DDX-Commercial-3.kicad_pcb  DDX-Commercial-3.kicad_pro  DDX-Commercial-3.kicad_sch  DDX-Commercial-7.kicad_pcb  DDX-Commercial-7.kicad_pro  DDX-Commercial-7.kicad_sch  DDX-Commercial-8.kicad_pcb  DDX-Commercial-8.kicad_pro  DDX-Commercial-8.kicad_sch  PCB Assembly Steps.txt  README.txt
DDX-EVO-1/: DDX-2.kicad_pcb  DDX-2.kicad_sch  Plan.txt  kicad_mp4.sh
DDX-EVO-2/: DDX-2.kicad_pcb  DDX-2.kicad_pro  README.md  sym-lib-table
DDX-EVO-3/: DDX-2.kicad_pro  DDX-2.kicad_sch  make_movie.sh
Digital-PA-Push-Pull-Final-v2/: README.md  digital-amp.kicad_pcb  digital-amp.kicad_pro  digital-amp.kicad_sch  digital-amp.plt
Digital-PA-Push-Pull-Final-v3-Simple/: README.md  digital-amp.kicad_pcb  (+3 more)
debug_firmwares/si5351_demo_simple/: CMakeLists.txt  README.md  main.cpp  picoload.sh
firmware_open/: CMakeLists.txt  README.md  picoload.sh
firmware_open/ft8_lib/: CMakeLists.txt
firmware_open/src/: CMakeLists.txt  analog_microphone.cpp  ddx_common.h  format.sh  hash.c  main.cpp  si5351.cpp  si5351.h  tusb_config.h  usb_analog_microphone.uf2  usb_descriptors.c  usb_microphone.cpp  ws2812byte.pio  ws2812byte.pio.h
(+1120 files in other folders)
